[package]
name = "smooth1d"
version = "0.1.0"
authors = ["arvidb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#name = "smooth1d"
#path = "src/c_interface.rs"
crate-type = ["staticlib"]
#crate-type = ["cdylib"]

[dependencies]
